--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(doParallel)
 import(e1071)
 import(foreach)
 import(glmnet)
+import(gplots)
 import(mixOmics)
 import(neuralnet)
 import(openxlsx)
