--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ import(corrplot)
 import(doParallel)
 import(e1071)
 import(foreach)
+import(ggplot2)
 import(glmnet)
 import(gplots)
-import(mixOmics)
 import(neuralnet)
 import(openxlsx)
 import(pls)
