--- a/input/config_copy.json
+++ b/input/config_copy.json
@@ -8,9 +8,25 @@
     {
        "platformName": "ENOSE",
        "dataFileName": "/Users/ozlemkaradeniz/Cranfield/Thesis/data/enose_beef_air_spoilage_GM_OK.xlsx"
+    },
+    {
+       "platformName": "FTIR",
+       "dataFileName": "/Users/ozlemkaradeniz/Cranfield/Thesis/data/FTIR_beef_air_spoilage_GM_ok.xlsx"
     }
   ],
   "machineLearningModels" : [
+     {
+       "name": "Regression Tree",
+       "shortName": "RT",
+       "numberOfIterations": 10
+    },
+    {
+       "name": "k-nearest neighbors",
+       "shortName": "KNN",
+       "numberOfIterations": 10,
+       "proportionOfTrainingSet": 0.7,
+       "pretreatment": "range-scale"
+    },
     {
        "name": "SVM-Radial",
        "shortName": "SVM-Radial",
