cosmetic changes on output files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(assess.quality)
 import(Boruta)
 import(DiagrammeR)
+import(R.utils)
 import(caret)
 import(colorRamps)
 import(configr)
 import(corrplot)
 import(doParallel)
+import(dplyr)
 import(e1071)
 import(foreach)
 import(ggplot2)
